--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "better-sqlite3": "^6.0.1",
     "express": "^4.17.1",
-    "mustache-express": "^1.3.0"
+    "mustache-express": "^1.3.0",
+    "body-parser": "latest"
   }
 }
