--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "better-sqlite3": "^6.0.1",
+    "body-parser": "latest",
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
-    "mustache-express": "^1.3.0",
-    "body-parser": "latest"
+    "mustache-express": "^1.3.0"
   }
 }
