--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "mustache-express": "^1.3.0"
+  },
+  "devDependencies": {
+    "express-validator": "^6.4.0"
   }
 }
