--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "body-parser": "latest",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
-    "mustache-express": "^1.3.0"
+    "mustache-express": "^1.3.0",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "express-validator": "^6.4.0"
