--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "mustache-express": "^1.3.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "password-hash": "^1.2.2"
   },
   "devDependencies": {
     "express-validator": "^6.4.0"
